tests/expectations/compiler/structs/inline_member_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EPAR0370017]: Could not parse the implicit value: 1.
    --> compiler-test:9:21
     |
   9 |         let y: u8 = 1;
     |                     ^"""]
